added knex related files

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express-pino-logger": "^4.0.0",
     "install": "^0.13.0",
     "knex": "^0.19.4",
-    "mysql2": "^1.7.0",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.2",
     "npm": "^6.11.3",
     "pino": "^5.13.3"
   },
